Revision history for Perl extension Archive::Zip.

1.17_05 Tue 19 Sep 2006 - Adam Kennedy
  - Seperated the classes from the main file into seperate packages.
  - Merged the Zip.pod into the main Zip.pm file.
  - Applied default Perl::Tidy to all of the source files, to improve
    the readability and maintainability of the files.
  - Added license in Makefile.PL

1.17_03 Sat 16 Sep 2006 - Adam Kennedy
  - Adding dependency on File::Which to deal with problems on systems
    that lack zip and unzip programs. This really should be a build-time
    dependency only, but ExtUtils::MakeMaker lacks that capability.
  - Builds and tests cleanly on Win32 now.

1.17_02 Sun  7 May 2006 - Adam Kennedy
  - Renamed the test scripts to the more conventional 01_name.t style
  - Upgraded all test scripts from Test.pm to Test::More (removing Test.pm dependency)
  - Various other miscellaneous cleanups of the test scripts
  - Removed MANIFEST and pod.t from repository (will be auto-generated)
  - Some cleaning up of the POD documentation for readability
  - Added SUPPORT section to docs
  - Merged external TODO file into the POD as a more-common TO DO section
  - Added a BUGS section to the docs

1.17_01 Sun 30 Apr 2006 - Adam Kennedy
  - Imported Archive::Zip into http://svn.phase-n.com/svn/cpan/ orphanage.
    If you have a CPAN login and have released a module, ask ADAMK about an
    account and you can repair your bug directly in the repository.
  - Removed the revision comments from the old CVS repository
  - DOS DateTime Format doesn't support dates before 1980 and goes crazy when
    decoding back to unix time. If we don't get passed a time at all
    (0 or undef) we now throw an error.
  - DOS DateTime Format doesn't support dates before 1980, so if we find any
    we warn and use Jan 1 12:01pm 1980 if we encounter any
  - Win32 doesn't support directory modification times.
    Tentatively use the current time as the mod-time to prevent sending