@@ -13,7 +13,7 @@ use Carp;
 use vars qw{$VERSION};
 
 BEGIN {
-    $VERSION = '1.17_02';
+    $VERSION = '1.17_05';
     $VERSION = eval $VERSION;
 }
 
