@@ -6,6 +6,7 @@ Revision history for Perl extension Archive::Zip.
   - Applied default Perl::Tidy to all of the source files, to improve
     the readability and maintainability of the files.
   - Added license in Makefile.PL
+  - Added some additional entries to the realclean files
 
 1.17_03 Sat 16 Sep 2006 - Adam Kennedy
   - Adding dependency on File::Which to deal with problems on systems
